--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   camera: ^0.5.8+2
   path_provider: ^1.6.11
   flushbar: ^1.10.4
+  firebase_core: ^0.4.5
+  cloud_firestore: ^0.13.7
 
   cupertino_icons: ^0.1.3
 
