--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   firebase_core: ^0.4.5
   cloud_firestore: ^0.13.7
   permission_handler: ^5.0.1+1
+  after_layout: ^1.0.7+2
 
   cupertino_icons: ^0.1.3
 
@@ -43,4 +44,4 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/logo.jpg
+    - assets/
