--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_fonts: ^1.1.0
   flip_card: ^0.4.4
   auto_size_text: ^2.1.0
   animated_text_kit: ^2.2.0
@@ -35,13 +34,18 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
-
-
-
 flutter:
 
   uses-material-design: true
 
   assets:
     - assets/
+
+  fonts:
+    - family: Nunito
+      fonts:
+        - asset: assets/nunito-fonts/Nunito-Light.ttf
+        - asset: assets/nunito-fonts/Nunito-Regular.ttf
+        - asset: assets/nunito-fonts/Nunito-Bold.ttf
+        - asset: assets/nunito-fonts/Nunito-Black.ttf
+          weight: 500
