--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   after_layout: ^1.0.7+2
   audioplayers: ^0.15.1
   audioplayer: ^0.8.1
+  wakelock: ^0.2.1+1
 
   cupertino_icons: ^0.1.3
 
