--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,38 +6,43 @@ publish_to: "none"
 version: 1.0.0+7
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.16.2 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flip_card: ^0.4.4
-  auto_size_text: ^2.1.0
-  animated_text_kit: ^2.2.0
-  flutter_icons: ^1.1.0
-  sensors: ^0.4.2+2
-  tilt_action: ^0.1.0
-  provider: ^4.1.3
-  video_player: ^0.10.11+2
-  gallery_saver: ^2.0.1
-  camera: ^0.5.8+2
-  path_provider: ^1.6.11
-  flushbar: ^1.10.4
-  firebase_core: ^0.4.5
-  cloud_firestore: ^0.13.7
-  permission_handler: ^5.0.1+1
+  flip_card: ^0.6.0
+  auto_size_text: ^3.0.0
+  animated_text_kit: ^4.2.1
+  flutter_icons_null_safety: ^1.1.0
+#  sensors: ^0.4.2+2
+  sensors_plus: ^1.3.2
+#  tilt_action: ^0.1.0
+  provider: ^6.0.3
+  video_player: ^2.4.5
+  gallery_saver: ^2.3.2
+  camera: ^0.9.8
+  path_provider: ^2.0.11
+#  flushbar: ^1.10.4
+#  another_flushbar: ^1.10.29
+  flutter_flushbar: ^0.0.2
+  firebase_core: ^1.17.1
+  cloud_firestore: ^3.1.17
+  permission_handler: ^9.2.0
   after_layout: ^1.0.7+2
-  audioplayers: ^0.15.1
-  audioplayer: ^0.8.1
-  wakelock: ^0.2.1+1
+#  audioplayers: ^1.0.0
+#  audioplayer: ^0.8.1
+  wakelock: ^0.6.1+2
+#  assets_audio_player: ^3.0.4+3
+  just_audio: ^0.9.24
 
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_launcher_icons: "^0.8.0"
+  flutter_launcher_icons: "^0.9.3"
 
 flutter_icons:
   android: "launcher_icon"
